--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <h3>Add new book</h3>
         <input type="text" name="" id="title" placeholder="Title">
         <input type="text" name="" id="author" placeholder="Author">
-        <input type="text" name="" id="pages" placeholder="Pages">
+        <input type="number" name="" id="pages" placeholder="Pages">
         <div class="readed-div">
             <label for="readed" style="font-size: 14px;">have you read it</label>
             <input type="checkbox" id="check">
